--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "connor-lock/laravel-snowflakes",
     "type": "library",
     "require": {
-        "php": "~8.3.0",
-        "illuminate/support": "^11.0",
-        "illuminate/console": "^11.0"
+        "php": ">=8.1",
+        "illuminate/support": ">=10.0",
+        "illuminate/console": ">=10.0"
     },
     "license": "MIT",
     "autoload": {
